--- a/Spring boot/webproject/src/main/resources/application.properties
+++ b/Spring boot/webproject/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.mvc.view.suffix=.jsp
+spring.h2.console.enabled=true
+Spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:nikhil
